--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/jpashop;
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/jpashop?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: root
+    password: doseong9114!!
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
-#          show_sql: true
+        show-sql: true
         format_sql: true
 
 logging:
