--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
 //    runtimeOnly 'com.h2database:h2'
     // https://mvnrepository.com/artifact/com.h2database/h2
-//    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.199'
+    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.199'
     testCompileOnly 'org.projectlombok:lombok'
     implementation 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
