컬렉션 조회 최적화 - 주문 조회 V3.1: 페이징과 한계돌파

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,13 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         show-sql: true
         format_sql: true
+        ## 인쿼리로 변환
+        default_batch_fetch_size: 100
 
 logging:
   level:
