--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
         format_sql: true
         ## 인쿼리로 변환
         default_batch_fetch_size: 100
+#    open-in-view: false
 
 logging:
   level:
